# WENO-PerformanceTests

./: .gitignore  CMakeLists.txt  README.md  install.sh
WENOBase/case/system/: blockMeshDict  controlDict  decomposeParDict  fvSchemes
WENOBase/src/: CMakeLists.txt  WENOBasePerformanceTest.cpp
WENOCoeff/case/: runPerformanceStudy.py
WENOCoeff/case/system/: WENODict
WENOCoeff/src/: CMakeLists.txt  WENOCoeffPerformanceTest.cpp
geometryWENO/: runPerformanceStudy.py  runPerformanceStudy.sh
geometryWENO/src/: CMakeLists.txt  geometryWENOPerformanceTest  geometryWENOPerformanceTest.cpp
